Backported Java 8 target type magic to Java 7 compatible code